Fix: Ensure captions settings are visible on dark as well as light mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -231,13 +231,13 @@
 @layer utilities {
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
-      display: none;
+    display: none;
   }
- /* Hide scrollbar for IE, Edge and Firefox */
+  /* Hide scrollbar for IE, Edge and Firefox */
   .no-scrollbar {
-      -ms-overflow-style: none;  /* IE and Edge */
-      scrollbar-width: none;  /* Firefox */
-}
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
 
 .markdown-editor-default-font {
@@ -355,4 +355,20 @@
   to {
     mask-size: 350vmax;
   }
+}
+.vjs-text-track {
+  color: #000000; /* Black text */
+  background-color: rgba(
+    255,
+    255,
+    255,
+    0.8
+  ); /* Light, semi-transparent background */
+  font-size: 1.2em;
+  padding: 4px 8px;
+  border-radius: 4px;
+}
+
+select {
+  background-color: #000;
 }
